<resources>
    <string name="app_name">UserApp</string>
    <string name="Main_title">WELCOME BACK !</string>
    <string name="Main_title2">Please login to get started</string>
    <string name="et1_hint">\u0020\u0020\u0020Contact Number</string>
    <string name="et2_hint">\u0020\u0020\u0020Password</string>
    <string name="btn_login">SIGN IN</string>
    <string name="remember_pass">Remember Password</string>
    <string name="signup_main">Don\'t have an account ?</string>
    <string name="title_activity_registration">Registration</string>
    <string name="PersonalInfo">Personal Info</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Address">Address</string>
    <string name="State">State</string>
    <string name="District">District</string>
    <string name="Grampanchayat">Grampanchayat</string>
    <string name="Village">Village</string>
</resources>
